validation with errors completed
